# llmdantic

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: ✨-feature-request.md  🐞-bug-report.md
llmdantic/: __init__.py  llmdantic.py
llmdantic/core/: exceptions.py  utils.py
llmdantic/models/: __init__.py  llm_config.py  llm_result.py  llm_usage.py
llmdantic/output_parsers/: __init__.py  output_parser.py
llmdantic/prompts/: __init__.py  format_instructions.py  prompt_builder.py
scripts/: test.sh  testpypi.sh
tests/: test_llmdantic_result.py  test_llmdantic_usage.py  test_output_parser.py  test_prompt_builder.py  test_utils.py
